--- a/app/src/main/res/drawable/btn_round.xml
+++ b/app/src/main/res/drawable/btn_round.xml
@@ -2,10 +2,10 @@
 <!--둥근 버튼으로 사용하기 위한 디자인-->
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
-    <solid android:color="@color/white"/>
+    <solid android:color="#07C97C"/>
     <stroke
         android:width="2dp"
-        android:color="#111" />
+        android:color="#07C97C" />
     <corners
-        android:radius="25dp"/>
+        android:radius="30dp"/>
 </shape>
