--- a/app/src/main/res/layout/fragment_note_maker.xml
+++ b/app/src/main/res/layout/fragment_note_maker.xml
@@ -31,13 +31,12 @@
                 android:fontFamily="@font/pretendard_black"
                 android:gravity="center"
                 android:text="   이렇게 찍어주세요!   "
-                android:textColor="@color/green"
-                android:textSize="25dp"
-                android:textStyle="bold" />
+                android:textColor="@color/fragment_note_maker_text"
+                android:textSize="25dp"/>
             <View
                 android:layout_width="match_parent"
                 android:layout_height="2dp"
-                android:background="@color/green"
+                android:background="@color/fragment_note_maker_text"
                 android:layout_marginTop="4dp"/>
 
 
@@ -58,11 +57,6 @@
         android:scaleType="centerCrop"
         android:src="@drawable/img_reference_image"/>
 
-<!--    글자가 수평으로 잘 보이게 찍어주세요-->
-<!--    지면으로부터 수직으로 찍어주세요-->
-<!--    중요한 단어는 빨간 펜으로 밑줄을 그어주세요.-->
-
-
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -74,7 +68,7 @@
         <View
             android:layout_width="match_parent"
             android:layout_height="2dp"
-            android:background="@color/green"
+            android:background="@color/fragment_note_maker_text"
             android:layout_marginTop="5dp"
             android:layout_marginBottom="15dp"/>
 
@@ -82,23 +76,26 @@
             android:id="@+id/textView5"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:textAlignment="center"
-            android:text="글자가 수평으로 잘 보이게 찍어주세요."
-            android:textColor="@color/green"
             android:layout_gravity="center"
+            android:fontFamily="@font/pretendard_extra_bold"
+            android:letterSpacing="-0.04"
+            android:text="글자가 수평으로 잘 보이게 찍어주세요."
+            android:textAlignment="center"
+            android:textColor="@color/fragment_note_maker_text"
             android:textSize="16sp"
             android:textStyle="bold" />
 
         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="중요한 단어는 빨간 펜으로 밑줄을 그어주세요."
-            android:textColor="@color/green"
             android:layout_gravity="center"
-            android:textAlignment="center"
             android:layout_marginTop="10dp"
+            android:fontFamily="@font/pretendard_extra_bold"
+            android:letterSpacing="-0.04"
+            android:text="중요한 단어는 빨간 펜으로 밑줄을 그어주세요."
+            android:textAlignment="center"
+            android:textColor="@color/fragment_note_maker_text"
             android:textSize="16sp"
-            android:textStyle="bold"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/textView6" />
 
@@ -106,22 +103,22 @@
             android:id="@+id/textView6"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:layout_marginTop="10dp"
+            android:fontFamily="@font/pretendard_extra_bold"
+            android:letterSpacing="-0.04"
             android:text="지면으로부터 수직으로 찍어주세요."
             android:textAlignment="center"
-            android:layout_gravity="center"
-            android:textColor="@color/green"
+            android:textColor="@color/fragment_note_maker_text"
             android:textSize="16sp"
-            android:textStyle="bold"
-            android:layout_marginTop="10dp"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/textView5" />
 
         <View
             android:layout_width="match_parent"
             android:layout_height="2dp"
-            android:background="@color/green"
-            android:layout_marginTop="10dp"
-            android:layout_marginBottom="15dp"/>
+            android:background="@color/fragment_note_maker_text"
+            android:layout_marginTop="10dp" />
 
 
     </LinearLayout>
@@ -133,7 +130,7 @@
         android:layout_height="wrap_content"
         android:layout_marginHorizontal="20dp"
         android:layout_marginTop="10dp"
-        android:layout_marginBottom="10dp"
+        android:layout_marginBottom="20dp"
         android:orientation="horizontal"
         android:background="@color/background_color">
 
@@ -141,29 +138,30 @@
             android:id="@+id/cameraButton"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_weight="1"
             android:layout_marginEnd="5dp"
+            android:layout_weight="1"
             android:background="@drawable/btn_round"
-            android:textStyle="bold"
-            android:textSize="20dp"
-            android:text="카메라"/>
+            android:fontFamily="@font/pretendard_extra_bold"
+            android:letterSpacing="-0.02"
+            android:stateListAnimator="@null"
+            android:text="카메라"
+            android:textColor="@color/fragment_note_maker_btn_text"
+            android:textSize="20dp" />
 
         <Button
             android:id="@+id/galleryButton"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:textSize="20dp"
-            android:background="@drawable/btn_round"
             android:layout_marginStart="5dp"
-            android:textStyle="bold"
-            android:text="갤러리"/>
-
+            android:layout_weight="1"
+            android:background="@drawable/btn_round"
+            android:fontFamily="@font/pretendard_extra_bold"
+            android:letterSpacing="-0.02"
+            android:stateListAnimator="@null"
+            android:text="갤러리"
+            android:textColor="@color/fragment_note_maker_btn_text"
+            android:textSize="20dp" />
 
     </LinearLayout>
-
-
-
-
 
 </LinearLayout>
