디자인 일부 개선

--- a/app/src/main/res/layout/fragment_all_note.xml
+++ b/app/src/main/res/layout/fragment_all_note.xml
@@ -4,7 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    android:background="@color/white_200">
+    android:background="@color/background_color">
 
 
     <LinearLayout
@@ -26,6 +26,7 @@
             android:layout_marginStart="4dp"
             android:layout_marginTop="13dp"
             android:text="나의 노트"
+            android:fontFamily="@font/pretendard_bold"
             android:textColor="@color/detail_note_main_title"
             android:textSize="20dp"
             android:textStyle="bold" />
