--- a/app/src/main/res/layout/fragment_note_viewer.xml
+++ b/app/src/main/res/layout/fragment_note_viewer.xml
@@ -4,7 +4,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical">
+    android:orientation="vertical"
+    android:background="@color/background_color">
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
@@ -25,14 +26,15 @@
 
         <TextView
             android:id="@+id/txt_note_viewr_title"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
+            android:layout_width="326dp"
+            android:layout_height="33dp"
             android:layout_marginStart="4dp"
             android:layout_marginTop="17dp"
             android:layout_marginBottom="12dp"
             android:ellipsize="end"
             android:maxLines="1"
             android:text="Note 1"
+            android:fontFamily="@font/pretendard_bold"
             android:textColor="@color/detail_note_main_title"
             android:textSize="20dp"
             android:textStyle="bold"
