--- a/app/src/main/res/layout/fragment_quiz.xml
+++ b/app/src/main/res/layout/fragment_quiz.xml
@@ -22,7 +22,8 @@
             android:textColor="@color/quiz"
             android:textSize="20dp"
             android:fontFamily="@font/pretendard_medium"
-            android:textStyle="bold" />
+            android:textStyle="bold"
+            android:lineSpacingMultiplier="1.1"/>
     </LinearLayout>
 
     <LinearLayout
@@ -46,32 +47,49 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginBottom="10dp"
+                android:paddingLeft="12dp"
                 android:text="1. 다중 스레드를 사용하여 비트 연산을 동시에 처리하는 알고리즘입니다."
-                android:textSize="22dp" />
+                android:textSize="20dp"
+                android:textColor="@color/content"
+                android:fontFamily="@font/pretendard_regular"
+                android:lineSpacingMultiplier="1.1"/>
 
             <RadioButton
                 android:id="@+id/radioButton2"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginBottom="10dp"
+                android:paddingLeft="12dp"
                 android:text="2. 비트 연산을 이용하여 데이터를 병렬적으로 처리하는 알고리즘입니다."
-                android:textSize="22dp" />
+                android:textSize="20dp"
+                android:textColor="@color/content"
+                android:fontFamily="@font/pretendard_regular"
+                android:lineSpacingMultiplier="1.1"/>
 
             <RadioButton
                 android:id="@+id/radioButton3"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginBottom="10dp"
+                android:paddingLeft="12dp"
                 android:text="3. 비트의 상태에 따라 분기하여 연산을 수행하는 알고리즘입니다."
-                android:textSize="22dp" />
+                android:textSize="20dp"
+                android:textColor="@color/content"
+                android:fontFamily="@font/pretendard_regular"
+                android:lineSpacingMultiplier="1.1"/>
 
             <RadioButton
                 android:id="@+id/radioButton4"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginBottom="10dp"
+                android:paddingLeft="12dp"
                 android:text="4. 비트를 배열 형태로 저장하여 연속적인 비트 연산을 수행하는 알고리즘입니다."
-                android:textSize="22dp" />
+                android:textSize="20dp"
+                android:textColor="@color/content"
+                android:fontFamily="@font/pretendard_regular"
+                android:lineSpacingMultiplier="1.1"/>
+
         </RadioGroup>
 
     </LinearLayout>
