--- a/app/src/main/res/layout/fragment_quiz_viewer.xml
+++ b/app/src/main/res/layout/fragment_quiz_viewer.xml
@@ -48,6 +48,7 @@
             android:textColor="@color/question"
             android:textSize="20dp"
             android:textStyle="bold"
+            android:fontFamily="@font/pretendard_bold"
             app:layout_constraintBottom_toTopOf="@+id/progressBar"
             app:layout_constraintStart_toEndOf="@+id/img_btn_back"
             app:layout_constraintTop_toTopOf="parent" />
