--- a/app/src/main/res/values-night/colors.xml
+++ b/app/src/main/res/values-night/colors.xml
@@ -18,6 +18,9 @@
     <color name="list_title">#FFFFFF</color>
     <color name="list_time">#AEA9A9</color>
 
+    <!-- 새 노트 만들기 -->
+    <color name="fragment_new_note_btn_text">#EDEEF0</color>
+
     <!-- 노트 문서 보기 -->
     <color name="note_background">#333333</color>
     <color name="detail_note_main_title">#AEA9A9</color>
