--- a/app/src/main/res/layout/input_note_name_dialog.xml
+++ b/app/src/main/res/layout/input_note_name_dialog.xml
@@ -3,11 +3,10 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="400dp"
+    android:layout_width="match_parent"
     android:layout_height="230dp"
     android:gravity="center"
-    android:backgroundTint="@color/white"
-    >
+    android:backgroundTint="@color/white">
 
     <!-- 제목 텍스트뷰 -->
     <TextView
@@ -24,32 +23,33 @@
         android:textStyle="bold"
         android:gravity="center" />
 
-    <!-- 에디트텍스트 -->
     <EditText
         android:id="@+id/editText"
-        android:layout_width="350dp"
-        android:layout_height="45dp"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
         android:background="@drawable/input_note_name"
         android:padding="8dp"
         app:layout_constraintTop_toBottomOf="@id/titleTextView"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        android:layout_marginStart="20dp"
+        android:layout_marginEnd="20dp"
         android:gravity="center"
         android:layout_marginTop="30dp" />
 
-    <!-- 완료 버튼 -->
     <Button
         android:id="@+id/submitButton"
-        android:layout_width="0dp"
-        android:layout_height="50dp"
+        android:layout_width="400dp"
+        android:layout_height="wrap_content"
         android:background="#00FF00"
-        android:gravity="center"
         android:text="완료"
         android:textStyle="bold"
         android:textSize="17sp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/editText"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/editText" />
+        app:layout_constraintEnd_toEndOf="parent"
+        android:layout_marginTop="30dp" />
+
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
