--- a/app/src/main/res/menu/note_viewer_menu.xml
+++ b/app/src/main/res/menu/note_viewer_menu.xml
@@ -1,15 +1,19 @@
 <?xml version="1.0" encoding="utf-8"?>
-<menu xmlns:android="http://schemas.android.com/apk/res/android">
+<menu xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
     <item
         android:id="@+id/create_quiz"
         android:title="문제 생성"
         />
+
     <item
         android:id="@+id/update_title"
         android:title="제목 수정"
         />
+
     <item
         android:id="@+id/delete_note"
+        android:icon="@drawable/delete"
         android:title="노트 삭제"
         />
 </menu>
