--- a/app/src/main/res/layout/select_note_to_save_dialog.xml
+++ b/app/src/main/res/layout/select_note_to_save_dialog.xml
@@ -8,7 +8,7 @@
 
 
     <TextView
-        android:layout_width="match_parent"
+        android:layout_width="400dp"
         android:layout_height="wrap_content"
         android:text="저장할 노트를 선택해 주세요"
         android:textSize="17dp"
@@ -16,12 +16,19 @@
         android:textAlignment="center"
         android:textColor="@color/green"/>
 
-    <!--임시 버튼-->
     <Button
         android:id="@+id/btn_save_note_to_new_title"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="새로운 노트에 저장하기"/>
+        android:layout_height="70dp"
+        android:backgroundTint="@color/white"
+        android:drawableLeft="@drawable/plus_circle"
+        android:gravity="left|center_vertical"
+        android:paddingStart="10dp"
+        android:paddingEnd="10dp"
+        android:text="새로운 노트에 저장하기"
+        android:textColor="#000000"
+        android:textSize="17dp" /> <!-- 상단 여백 설정 -->
+
 
 
     <androidx.recyclerview.widget.RecyclerView
