--- a/app/src/main/res/layout/fragment_all_quiz.xml
+++ b/app/src/main/res/layout/fragment_all_quiz.xml
@@ -24,35 +24,12 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="4dp"
             android:layout_marginTop="13dp"
-            android:text="나의 퀴즈"
+            android:text="나의 문제집"
             android:fontFamily="@font/pretendard_bold"
             android:textColor="@color/detail_note_main_title"
             android:textSize="20dp"
             android:textStyle="bold" />
 
-        <View
-            android:layout_width="0dp"
-            android:layout_height="0dp"
-            android:layout_weight="1" />
-
-        <ImageView
-            android:id="@+id/search_btn"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:src="@drawable/search" />
-
-        <View
-            android:layout_width="14dp"
-            android:layout_height="match_parent" />
-
-        <ImageView
-            android:id="@+id/etc_btn"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:layout_marginEnd="24dp"
-            android:src="@drawable/menu_vertical" />
 
     </LinearLayout>
 
