디자인 일부 개선

--- a/app/src/main/res/layout/input_note_name_dialog.xml
+++ b/app/src/main/res/layout/input_note_name_dialog.xml
@@ -6,7 +6,7 @@
     android:layout_width="match_parent"
     android:layout_height="230dp"
     android:gravity="center"
-    android:backgroundTint="@color/white">
+    android:background="@color/background_color">
 
     <!-- 제목 텍스트뷰 -->
     <TextView
@@ -14,8 +14,9 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:text="노트 제목을 입력해 주세요"
+        android:fontFamily="@font/pretendard_bold"
         android:textSize="17sp"
-        android:textColor="@color/green"
+        android:textColor="@color/input_note_name_text"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -28,6 +29,7 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:background="@drawable/input_note_name"
+        android:textColor="#000000"
         android:padding="8dp"
         app:layout_constraintTop_toBottomOf="@id/titleTextView"
         app:layout_constraintStart_toStartOf="parent"
@@ -41,15 +43,18 @@
         android:id="@+id/submitButton"
         android:layout_width="400dp"
         android:layout_height="wrap_content"
+        android:layout_marginTop="28dp"
         android:background="#00FF00"
+        android:fontFamily="@font/pretendard_bold"
         android:text="완료"
-        android:textStyle="bold"
+        android:textColor="@color/complete"
         android:textSize="17sp"
-        app:layout_constraintTop_toBottomOf="@id/editText"
-        app:layout_constraintStart_toStartOf="parent"
+        android:textStyle="bold"
+        android:backgroundTint="#07C97C"
         app:layout_constraintEnd_toEndOf="parent"
-        android:layout_marginTop="30dp" />
-
+        app:layout_constraintHorizontal_bias="0.454"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/editText" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
