--- a/app/src/main/res/values-night/colors.xml
+++ b/app/src/main/res/values-night/colors.xml
@@ -45,5 +45,10 @@
     <color name="developer_email">#FFFFFF</color>
     <color name="dev_info">#FFFFFF</color>
 
+    <!-- 노트 이름 입력받기 다이얼로그 -->
+    <color name="input_note_name_text">#07C97C</color>
+    <color name="input_note_name_bg">#333333</color>
+    <color name="complete">#FFFFFF</color>
+
     <color name="white">#FFFFFF</color>
 </resources>
