디자인 일부 개선

--- a/app/src/main/res/values-night/colors.xml
+++ b/app/src/main/res/values-night/colors.xml
@@ -45,10 +45,15 @@
     <color name="developer_email">#FFFFFF</color>
     <color name="dev_info">#FFFFFF</color>
 
+    <!-- 저장 방식 선택 -->
+    <color name="save_to_new_note_text">#F9F9F9</color>
+
     <!-- 노트 이름 입력받기 다이얼로그 -->
-    <color name="input_note_name_text">#07C97C</color>
+    <color name="input_note_name_text">#F9F9F9</color>
+    <color name="input_note_name_edit_bg">#333333</color>
+    <color name="input_note_name_line">#C7E7DA</color>
     <color name="input_note_name_bg">#333333</color>
-    <color name="complete">#FFFFFF</color>
+    <color name="complete">#F9F9F9</color>
 
     <color name="white">#FFFFFF</color>
 </resources>
