--- a/app/src/main/res/drawable/input_note_name.xml
+++ b/app/src/main/res/drawable/input_note_name.xml
@@ -1,8 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
+<layer-list xmlns:android="http://schemas.android.com/apk/res/android">
 
-<shape xmlns:android="http://schemas.android.com/apk/res/android"
-android:shape="rectangle">
-<solid android:color="#FFFFFF"/>
-<corners android:radius="9dp"/>
-<stroke android:color="#C7E7DA" android:width="1dp" />
-</shape>
+    <item>
+        <shape android:shape="rectangle">
+            <corners android:radius="5dp"/>
+            <stroke android:color="#C7E7DA" android:width="1dp" />
+        </shape>
+    </item>
+
+</layer-list>
