--- a/app/src/main/res/layout/select_note_to_save_dialog.xml
+++ b/app/src/main/res/layout/select_note_to_save_dialog.xml
@@ -3,7 +3,7 @@
     android:layout_width="match_parent"
     android:layout_height="400dp"
     android:gravity="center"
-    android:backgroundTint="@color/white"
+    android:background="@color/background_color"
     android:orientation="vertical">
 
 
@@ -12,24 +12,39 @@
         android:layout_height="wrap_content"
         android:text="저장할 노트를 선택해 주세요"
         android:textSize="17dp"
+        android:fontFamily="@font/pretendard_bold"
+        android:padding="10dp"
+
         android:layout_margin="10dp"
         android:textAlignment="center"
         android:textColor="@color/green"/>
+
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="1dp"
+        android:background="@color/break_line"
+        />
 
     <Button
         android:id="@+id/btn_save_note_to_new_title"
         android:layout_width="match_parent"
         android:layout_height="70dp"
-        android:backgroundTint="@color/white"
+        android:backgroundTint="@color/background_color"
+        android:fontFamily="@font/pretendard_bold"
         android:drawableLeft="@drawable/plus_circle"
         android:gravity="left|center_vertical"
         android:paddingStart="10dp"
         android:paddingEnd="10dp"
         android:text="새로운 노트에 저장하기"
-        android:textColor="#000000"
-        android:textSize="17dp" /> <!-- 상단 여백 설정 -->
+        android:textColor="@color/save_to_new_note_text"
+        android:textSize="17dp"
+        android:stateListAnimator="@null"/> <!-- 상단 여백 설정 -->
 
-
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="1dp"
+        android:background="@color/break_line"
+        />
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/custom_dialog_recycler_view"
