FIX : fragment_note_maker에 pdf 버튼 추가

--- a/app/src/main/res/layout/fragment_note_maker.xml
+++ b/app/src/main/res/layout/fragment_note_maker.xml
@@ -162,6 +162,20 @@
             android:textColor="@color/fragment_note_maker_btn_text"
             android:textSize="20dp" />
 
+        <Button
+            android:id="@+id/pdfButton"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="5dp"
+            android:layout_weight="1"
+            android:background="@drawable/btn_round"
+            android:fontFamily="@font/pretendard_extra_bold"
+            android:letterSpacing="-0.02"
+            android:stateListAnimator="@null"
+            android:text="PDF"
+            android:textColor="@color/fragment_note_maker_btn_text"
+            android:textSize="20dp" />
+
     </LinearLayout>
 
 </LinearLayout>
