--- a/app/src/main/res/layout/all_quiz_list_item.xml
+++ b/app/src/main/res/layout/all_quiz_list_item.xml
@@ -92,8 +92,8 @@
             android:layout_marginBottom="28dp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            app:srcCompat="@drawable/img_right_arrow" />
+            app:layout_constraintTop_toTopOf="parent"/>
+<!--            app:srcCompat="@drawable/img_right_arrow" />-->
 
         <View
             android:layout_width="match_parent"
