--- a/app/src/main/res/xml/network_security_config.xml
+++ b/app/src/main/res/xml/network_security_config.xml
@@ -13,7 +13,7 @@
 
 <!--        login test-->
         <domain includeSubdomains="true">223.130.132.249</domain>
-
+        <domain includeSubdomains="true">220.76.49.32</domain>
         <!--        local test-->
         <domain includeSubdomains="true">172.20.10.2</domain>
 
