💄 MyPage 텍스트 변경
1. MyPage 텍스트 변경

--- a/app/src/main/res/layout/fragment_my_page.xml
+++ b/app/src/main/res/layout/fragment_my_page.xml
@@ -129,7 +129,7 @@
                     android:fontFamily="@font/pretendard_regular"
                     android:gravity="center"
                     android:lineSpacingMultiplier="1.3"
-                    android:text="JPA와 SpringBoot를 이용한 API 개발\nNaver Cloud Flatform을 이용한 서버 배포\nAndroid 디자인 개선"
+                    android:text="Kotlin, JPA, SpringBoot를 이용한 API 개발\n클라우드 구축 (VPC, EC2, RDS, Jenkins, Docker)\n애플리케이션 디자인 개선"
                     android:textAlignment="center"
                     android:textColor="@color/dev_info"
                     app:layout_constraintEnd_toEndOf="parent"
@@ -221,7 +221,7 @@
                     android:fontFamily="@font/pretendard_regular"
                     android:gravity="center"
                     android:lineSpacingMultiplier="1.3"
-                    android:text="안드로이드 및 장고 서버 개발\n클라이언트 서버간 API 통신 구축\nGPT 프롬프트 엔지니어링"
+                    android:text="Kotlin, JPA, SpringBoot를 이용한 API 개발\nAndroid 개발 및 서버간 API 통신 구축\nGPT Prompt Engineering"
                     android:textAlignment="center"
                     android:textColor="@color/dev_info"
                     app:layout_constraintEnd_toEndOf="parent"
@@ -313,7 +313,7 @@
                     android:layout_marginTop="10dp"
                     android:gravity="center"
                     android:lineSpacingMultiplier="1.3"
-                    android:text="Android Application 개발 담당\nDjango Server 구축 및 개발\nGPT Prompt Engineering"
+                    android:text="Android &amp; iOS Application 개발 담당\FastAPI Server 구축 및 개발\nGPT Prompt Engineering"
                     android:textAlignment="center"
                     android:textColor="@color/dev_info"
                     app:layout_constraintEnd_toEndOf="parent"
