--- a/app/src/main/res/layout/fragment_all_note.xml
+++ b/app/src/main/res/layout/fragment_all_note.xml
@@ -38,6 +38,7 @@
 <androidx.recyclerview.widget.RecyclerView
     android:id="@+id/all_note_list_recycler_view"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"/>
+    android:layout_height="wrap_content"
+    tools:listitem="@layout/all_note_list_item"/>
 
 </LinearLayout>
