--- a/app/src/main/res/layout/fragment_my_note.xml
+++ b/app/src/main/res/layout/fragment_my_note.xml
@@ -93,7 +93,6 @@
             android:textColor="@color/main_recent"
             android:textSize="18dp"
             android:textStyle="bold"
-
             app:layout_constraintBottom_toTopOf="@+id/guideline4"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="@+id/guideline1" />
@@ -108,6 +107,7 @@
             android:textColor="@color/main_show_all"
             android:textSize="12dp"
             android:textStyle="bold"
+            app:layout_constraintTop_toTopOf="@+id/txt_recent_note"
             app:layout_constraintBottom_toBottomOf="@+id/txt_recent_note"
             app:layout_constraintEnd_toEndOf="parent" />
 
@@ -129,7 +129,8 @@
             app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="@+id/guideline4"
-            app:layout_constraintVertical_bias="0.051" />
+            app:layout_constraintVertical_bias="0.051"
+            tools:listitem="@layout/note_list_item"/>
 
         <androidx.constraintlayout.widget.Guideline
             android:id="@+id/guideline5"
@@ -158,7 +159,6 @@
             android:id="@+id/txt_go_all_quiz"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="28dp"
             android:layout_marginEnd="24dp"
             android:fontFamily="@font/pretendard_light"
             android:text="전체 보기"
@@ -167,7 +167,7 @@
             android:textStyle="bold"
             app:layout_constraintBottom_toBottomOf="@+id/textView3"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toTopOf="@+id/guideline5" />
+            app:layout_constraintTop_toTopOf="@+id/textView3" />
 
         <androidx.constraintlayout.widget.Guideline
             android:id="@+id/guideline7"
@@ -185,7 +185,8 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="@+id/guideline7">
+            app:layout_constraintTop_toTopOf="@+id/guideline7"
+            tools:listitem="@layout/quiz_list_item">
 
         </androidx.recyclerview.widget.RecyclerView>
 
