--- a/app/src/main/res/layout/select_note_to_save_dialog.xml
+++ b/app/src/main/res/layout/select_note_to_save_dialog.xml
@@ -2,6 +2,7 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="400dp"
+    xmlns:tools="http://schemas.android.com/tools"
     android:gravity="center"
     android:background="@color/background_color"
     android:orientation="vertical">
@@ -49,7 +50,8 @@
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/custom_dialog_recycler_view"
         android:layout_width="match_parent"
-        android:layout_height="300dp" />
+        android:layout_height="300dp"
+        tools:listitem="@layout/all_note_list_item"/>
 
 
 </LinearLayout>
